tests/NormalTests/paczka1/fuzzy1/10650967.err
Error in line 2: 2L3VU S46 35,1
Error in line 3: 2L3VU A896 48,6
Error in line 4: 2L3VU A334 87,1
Error in line 5: 2L3VU A896 51,9
Error in line 1: vRtZxofmY A896 23,2
Error in line 8: S46 A334 61,41
Error in line 11: S46 A334 290,2
Error in line 7: vRtZxofmY A334 56,2
Error in line 19: vRtZxofmY S195 4,4
Error in line 6: 2L3VU S46 50,5
Error in line 22: 2L3VU S195 94,4
Error in line 25: 2L3VU S46 67,6
Error in line 39: 2L3VU A896 55,5
